Revision history for Perl extension MooseX-Getopt

{{$NEXT}}

0.57      2013-09-07 21:29:05Z (Karen Etheridge)
 - spelling fixes (RT#87780, David Steinbrunner)
 - removed use of deprecated Class::MOP::load_class
 - repository migrated from shadowcat to the github moose organization

0.56      2013-02-15 13:13:18 PST-0800
 - depend on newest Path::Tiny, to regain 5.8.x compatibility (gone since
   v0.52)

0.55      2013-02-12 10:02:55 PST-0800
 - fix broken tests on win32 with file comparisons

0.54      2013-02-09 16:25:32 PST-0800
 - fix broken tests on win32 with file comparisons
 - allow configfiles called "0"
 - support more mechanisms for overriding default configfile
 - when using in conjunction with MooseX::ConfigFromFile, configfile value now
   properly passed to new()

0.53      2013-02-05 09:59:00 PST-0800
 - properly indicate optional dependency in tests using
   MooseX::ConfigFromFile

0.52      2013-02-02 19:01:25 PST-0800
 - tests converted from using Path::Class to Path::Tiny

0.51      2013-01-27 09:38:11 PST-0800
 - missing test prereqs now declared (thanks for the automated reports, David
   Cantrell!)

0.50      2012-12-27 00:20:56 PST-0800
 - unbreak Catalyst::Runtime tests (etc) by keeping _getopt_full_usage in the
   callstack. (RT#82249)

0.49      2012-12-26 10:13:41 PST-0800
 - silence a warning in tests if the user does not have YAML::XS installed
   (thanks for the report, Getty!)
 - fix off-by-one issues in test plans if optional requirements are not met

0.48      2012-12-23 18:08:04 PST-0800
 - documentation and tests amended to prefer usage of 'trait' over 'metaclass'
   as much as possible
 - print_usage_text() exposed as a public method, to make it easier for
   consuming classes to modify the behaviour when usage text is printed

0.47      2012-08-30 16:37:59 PDT-0700
 - re-release to remove double $VERSION declarations

0.46      2012-08-30 15:17:28 PDT-0700
 - -h is also treated as a --help option
