@@ -8,12 +8,6 @@ use Test::More tests => 3;
 use Test::Warnings;
 use Path::Tiny 0.009;
 
-# avoid warning if all we have installed is YAML or YAML::Syck - the user will
-# see this eventually when he actually uses MooseX::SimpleConfig in his own
-# code
-use Config::Any::YAML;
-$Config::Any::YAML::NO_YAML_XS_WARNING = 1;
-
 {
     package Foo;
     use Moose;
